fixed home page on mobile and added icons to homepage cards

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -13,8 +13,10 @@
     gap:20px ;
 
     #icon{
-        border: 1px solid black;
         height: 66px;
+        img{
+            height: 100%;
+        }
         
     }
 
