--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,16 +2,20 @@
     background-color: #131415;
     box-shadow: 0px 5px 10px #131415;
     height: clamp(50px,8vh,90px);
+
+    overflow: hidden;
     display: flex;
     #navbar{
+        margin-top: 5px;
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-wrap: wrap;
         width: 100%;
         gap: 30px;
         #padding-1{
             border: none;
-            width:clamp(20px,50vw,1200px) ;
+            width:clamp(50px,50vw,1200px) ;
         }
         
     }
@@ -35,7 +39,7 @@
         width: 50px;
         img{
             width: 100%;
-            
+            height: 100%;
         }
     }
     #logo-text{
